# CSO-project

./: .gitignore  Flow.py  README.md  flowMaster.py  flowObject.py  flowOption.py  main.py  nameTestMain.py  nameTestSub.py  pyproject.toml  requirements.txt  setup.cfg  test.py  users.pickle
src/: Home.py  Tree.py  savedata.pickle  🏠 Home.py
src/Flow/: Flow.py  Tree.py
src/Flow.egg-info/: SOURCES.txt
src/Flow/Flow.egg-info/: PKG-INFO
src/Tree/: Node.py  Tree.py
src/UI/: main.py
src/pages/: Download Data.py  Upload Data.py  ⚙️  Edit Node.py  ⚙️  New Node.py  🌲Tree View.py
tests/: test_Tree.py
