[metadata]
name = Tree
description = Assistant for KKFSC staff
author = Lim Jit, Samuel Chia
platforms = unix, windows, osx, win32, linux
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.9
package_dir = 
    =src
zip_safe = no
